Revert "sonarbugs (#5632)"
This reverts commit e3f9fcd1ac57016edd2d711edd5e98102ba54943.