@@ -92,8 +92,6 @@ import no.nav.folketrygdloven.kalkulus.opptjening.v1.OpptjeningPeriodeDto;
  */
 class MapTilKalkulatorInput {
 
-    private MapTilKalkulatorInput() {}
-
     public static KalkulatorInputDto map(BeregningsgrunnlagInput beregningsgrunnlagInput) {
         if (beregningsgrunnlagInput == null) {
             return null;
@@ -108,32 +106,32 @@ class MapTilKalkulatorInput {
     }
 
     private static List<KravperioderPrArbeidsforhold> mapKravperioder(List<KravperioderPrArbeidsforholdDto> kravPrArbeidsgiver) {
-        return kravPrArbeidsgiver.stream().map(MapTilKalkulatorInput::mapKrav).toList();
+        return kravPrArbeidsgiver.stream().map(MapTilKalkulatorInput::mapKrav).collect(Collectors.toList());
     }
 
     private static KravperioderPrArbeidsforhold mapKrav(KravperioderPrArbeidsforholdDto k) {
-        var aktør = mapArbeidsgiverNullsafe(k.getArbeidsgiver());
+        var aktør = mapArbeidsgiver(k.getArbeidsgiver());
         var internRef = mapAbakusReferanse(k.getArbeidsforholdRef());
-        var kravperioder = k.getPerioder().stream().map(MapTilKalkulatorInput::mapKravperiode).toList();
+        var kravperioder = k.getPerioder().stream().map(MapTilKalkulatorInput::mapKravperiode).collect(Collectors.toList());
         var sisteSøktePeriode = mapSisteSøktePeriode(k); // Denne blir ikke korrekt, bør se på ny mapping her
         return new KravperioderPrArbeidsforhold(aktør, internRef, kravperioder, sisteSøktePeriode);
     }
 
     private static PerioderForKrav mapSisteSøktePeriode(KravperioderPrArbeidsforholdDto k) {
         var refperiode = k.getSisteSøktePerioder().stream()
-            .map(p -> new Refusjonsperiode(mapPeriodeNullsafe(p), BigDecimal.ZERO))
-            .toList();
+            .map(p -> new Refusjonsperiode(mapPeriode(p), BigDecimal.ZERO))
+            .collect(Collectors.toList());
         var innsending = refperiode.stream().map(p -> p.getPeriode().getFom()).min(Comparator.naturalOrder()).orElse(LocalDate.now());
         return new PerioderForKrav(innsending, refperiode);
     }
 
     private static PerioderForKrav mapKravperiode(PerioderForKravDto kravperiode) {
-        var refusjonsperioder = kravperiode.getPerioder().stream().map(MapTilKalkulatorInput::mapRefusjonsperiode).toList();
+        var refusjonsperioder = kravperiode.getPerioder().stream().map(MapTilKalkulatorInput::mapRefusjonsperiode).collect(Collectors.toList());
         return new PerioderForKrav(kravperiode.getInnsendingsdato(), refusjonsperioder);
     }
 
     private static Refusjonsperiode mapRefusjonsperiode(RefusjonsperiodeDto refusjonsperiode) {
-        return new Refusjonsperiode(mapPeriodeNullsafe(refusjonsperiode.periode()), refusjonsperiode.beløp());
+        return new Refusjonsperiode(mapPeriode(refusjonsperiode.periode()), refusjonsperiode.beløp());
     }
 
     private static AktivitetGraderingDto mapAktivitetGradering(AktivitetGradering aktivitetGradering) {
@@ -145,22 +143,20 @@ class MapTilKalkulatorInput {
     }
 
     private static List<AndelGraderingDto> mapAndelGraderinger(Set<AndelGradering> andelGradering) {
-        return andelGradering == null ? null : andelGradering.stream().map(MapTilKalkulatorInput::mapAndelGradering).toList();
+        return andelGradering == null ? null : andelGradering.stream().map(MapTilKalkulatorInput::mapAndelGradering).collect(Collectors.toList());
     }
 
     private static AndelGraderingDto mapAndelGradering(AndelGradering andelGradering) {
-        if (andelGradering == null) {
-            return null;
-        }
-        var aktivitetStatus = AktivitetStatus.fraKode(andelGradering.getAktivitetStatus().getKode());
-        var arbeidsgiver = mapArbeidsgiver(andelGradering.getArbeidsgiver());
-        var arbeidsforholdRef = mapAbakusReferanse(andelGradering.getArbeidsforholdRef());
-        var graderinger = mapGraderinger(andelGradering.getGraderinger());
-        return new AndelGraderingDto(aktivitetStatus, arbeidsgiver, arbeidsforholdRef, graderinger);
+        return andelGradering == null ? null
+            : new AndelGraderingDto(
+                andelGradering.getAktivitetStatus() == null ? null : AktivitetStatus.fraKode(andelGradering.getAktivitetStatus().getKode()),
+                mapArbeidsgiver(andelGradering.getArbeidsgiver()),
+                mapAbakusReferanse(andelGradering.getArbeidsforholdRef()),
+                mapGraderinger(andelGradering.getGraderinger()));
     }
 
     private static List<GraderingDto> mapGraderinger(List<AndelGradering.Gradering> graderinger) {
-        return graderinger.stream().map(MapTilKalkulatorInput::mapGradering).toList();
+        return graderinger == null ? null : graderinger.stream().map(MapTilKalkulatorInput::mapGradering).collect(Collectors.toList());
     }
 
     private static GraderingDto mapGradering(AndelGradering.Gradering gradering) {
@@ -172,8 +168,7 @@ class MapTilKalkulatorInput {
             return null;
         }
         if (ytelsespesifiktGrunnlag instanceof SvangerskapspengerGrunnlag svpGrunnlag) {
-            var utbetalingsgradPrAktivitet = mapUtbetalingsgradPrAktivitet(svpGrunnlag.getUtbetalingsgradPrAktivitet());
-            return new no.nav.folketrygdloven.kalkulus.beregning.v1.SvangerskapspengerGrunnlag(utbetalingsgradPrAktivitet);
+            return new no.nav.folketrygdloven.kalkulus.beregning.v1.SvangerskapspengerGrunnlag(mapUtbetalingsgradPrAktivitet(svpGrunnlag.getUtbetalingsgradPrAktivitet()));
         }
         if (ytelsespesifiktGrunnlag instanceof no.nav.folketrygdloven.kalkulator.input.ForeldrepengerGrunnlag fpGrunnlag) {
             var aktivitetGraderingDto = mapAktivitetGradering(fpGrunnlag.getAktivitetGradering());
@@ -183,20 +178,18 @@ class MapTilKalkulatorInput {
     }
 
     private static List<UtbetalingsgradPrAktivitetDto> mapUtbetalingsgradPrAktivitet(List<no.nav.folketrygdloven.kalkulator.modell.svp.UtbetalingsgradPrAktivitetDto> utbetalingsgradPrAktivitet) {
-        return utbetalingsgradPrAktivitet.stream().map(MapTilKalkulatorInput::mapUtbetalingsgradForAktivitet).toList();
+        return utbetalingsgradPrAktivitet == null ? null : utbetalingsgradPrAktivitet.stream().map(MapTilKalkulatorInput::mapUtbetalingsgradForAktivitet).collect(Collectors.toList());
     }
 
     private static UtbetalingsgradPrAktivitetDto mapUtbetalingsgradForAktivitet(no.nav.folketrygdloven.kalkulator.modell.svp.UtbetalingsgradPrAktivitetDto utbetalingsgradPrAktivitetDto) {
-        if (utbetalingsgradPrAktivitetDto == null) {
-            return null;
-        }
-        var utbetalingsgradArbeidsforholdDto = mapArbeidsforholdDto(utbetalingsgradPrAktivitetDto.getUtbetalingsgradArbeidsforhold());
-        var periodeMedUtbetalingsgrad = mapPerioderMedUtbetalingsgrad(utbetalingsgradPrAktivitetDto.getPeriodeMedUtbetalingsgrad());
-        return new UtbetalingsgradPrAktivitetDto(utbetalingsgradArbeidsforholdDto, periodeMedUtbetalingsgrad);
+        return utbetalingsgradPrAktivitetDto == null ? null
+            : new UtbetalingsgradPrAktivitetDto(
+                mapArbeidsforholdDto(utbetalingsgradPrAktivitetDto.getUtbetalingsgradArbeidsforhold()),
+                mapPerioderMedUtbetalingsgrad(utbetalingsgradPrAktivitetDto.getPeriodeMedUtbetalingsgrad()));
     }
 
     private static List<PeriodeMedUtbetalingsgradDto> mapPerioderMedUtbetalingsgrad(List<no.nav.folketrygdloven.kalkulator.modell.svp.PeriodeMedUtbetalingsgradDto> periodeMedUtbetalingsgrad) {
-        return periodeMedUtbetalingsgrad.stream().map(MapTilKalkulatorInput::mapPeriodeMedUtbetalingsgrad).toList();
+        return periodeMedUtbetalingsgrad == null ? null : periodeMedUtbetalingsgrad.stream().map(MapTilKalkulatorInput::mapPeriodeMedUtbetalingsgrad).collect(Collectors.toList());
     }
 
     private static PeriodeMedUtbetalingsgradDto mapPeriodeMedUtbetalingsgrad(no.nav.folketrygdloven.kalkulator.modell.svp.PeriodeMedUtbetalingsgradDto periodeMedUtbetalingsgradDto) {
@@ -207,29 +200,30 @@ class MapTilKalkulatorInput {
     }
 
     private static AktivitetDto mapArbeidsforholdDto(no.nav.folketrygdloven.kalkulator.modell.svp.AktivitetDto utbetalingsgradArbeidsforhold) {
-        var arbeidsgiver = utbetalingsgradArbeidsforhold.getArbeidsgiver().map(MapTilKalkulatorInput::mapArbeidsgiverNullsafe).orElse(null);
-        var internArbeidsforholdRef = mapAbakusReferanse(utbetalingsgradArbeidsforhold.getInternArbeidsforholdRef());
-        var uttakArbeidType = new UttakArbeidType(utbetalingsgradArbeidsforhold.getUttakArbeidType().getKode());
-        return new AktivitetDto(arbeidsgiver, internArbeidsforholdRef, uttakArbeidType);
+        return utbetalingsgradArbeidsforhold == null ? null
+            : new AktivitetDto(
+                utbetalingsgradArbeidsforhold.getArbeidsgiver().map(MapTilKalkulatorInput::mapArbeidsgiver).orElse(null),
+                mapAbakusReferanse(utbetalingsgradArbeidsforhold.getInternArbeidsforholdRef()),
+                utbetalingsgradArbeidsforhold.getUttakArbeidType() == null ? null : new UttakArbeidType(utbetalingsgradArbeidsforhold.getUttakArbeidType().getKode()));
     }
 
     private static OpptjeningAktiviteterDto mapOpptjeningAktiviteter(Collection<no.nav.folketrygdloven.kalkulator.modell.opptjening.OpptjeningAktiviteterDto.OpptjeningPeriodeDto> opptjeningAktiviteterForBeregning) {
-        return new OpptjeningAktiviteterDto(mapOpptjeningPerioder(opptjeningAktiviteterForBeregning));
+        return opptjeningAktiviteterForBeregning == null ? null : new OpptjeningAktiviteterDto(mapOpptjeningPerioder(opptjeningAktiviteterForBeregning));
     }
 
     private static List<OpptjeningPeriodeDto> mapOpptjeningPerioder(Collection<no.nav.folketrygdloven.kalkulator.modell.opptjening.OpptjeningAktiviteterDto.OpptjeningPeriodeDto> opptjeningAktiviteterForBeregning) {
-        return opptjeningAktiviteterForBeregning.stream().map(MapTilKalkulatorInput::mapOpptjeningPeriode).toList();
+        return opptjeningAktiviteterForBeregning.stream().map(MapTilKalkulatorInput::mapOpptjeningPeriode).collect(Collectors.toList());
     }
 
     private static OpptjeningPeriodeDto mapOpptjeningPeriode(no.nav.folketrygdloven.kalkulator.modell.opptjening.OpptjeningAktiviteterDto.OpptjeningPeriodeDto opptjeningPeriodeDto) {
         return new OpptjeningPeriodeDto(
             OpptjeningAktivitetType.fraKode(opptjeningPeriodeDto.getOpptjeningAktivitetType().getKode()),
-            mapPeriode(opptjeningPeriodeDto.getPeriode()),
-            mapArbeidsgiverNullsafe(opptjeningPeriodeDto.getArbeidsgiverOrgNummer(), opptjeningPeriodeDto.getArbeidsgiverAktørId()),
+            new Periode(opptjeningPeriodeDto.getPeriode().getFomDato(), opptjeningPeriodeDto.getPeriode().getTomDato()),
+            mapArbeidsgiver(opptjeningPeriodeDto.getArbeidsgiverOrgNummer(), opptjeningPeriodeDto.getArbeidsgiverAktørId()),
             mapAbakusReferanse(opptjeningPeriodeDto.getArbeidsforholdId()));
     }
 
-    private static Aktør mapArbeidsgiverNullsafe(String arbeidsgiverOrgNummer, String arbeidsgiverAktørId) {
+    private static Aktør mapArbeidsgiver(String arbeidsgiverOrgNummer, String arbeidsgiverAktørId) {
         if (arbeidsgiverOrgNummer == null && arbeidsgiverAktørId == null) {
             return null;
         }
@@ -237,6 +231,9 @@ class MapTilKalkulatorInput {
     }
 
     private static InntektArbeidYtelseGrunnlagDto mapIayGrunnlag(BeregningsgrunnlagInput beregningsgrunnlagInput) {
+        if (beregningsgrunnlagInput.getIayGrunnlag() == null) {
+            return null;
+        }
         var iayGrunnlag = beregningsgrunnlagInput.getIayGrunnlag();
         var inntektArbeidYtelseGrunnlagDto = new InntektArbeidYtelseGrunnlagDto();
         inntektArbeidYtelseGrunnlagDto.medArbeidDto(mapArbeidDto(iayGrunnlag.getAktørArbeidFraRegister()));
@@ -253,34 +250,33 @@ class MapTilKalkulatorInput {
     }
 
     private static List<YtelseDto> mapYtelser(Collection<no.nav.folketrygdloven.kalkulator.modell.iay.YtelseDto> alleYtelser) {
-        return alleYtelser == null ? null : alleYtelser.stream().map(MapTilKalkulatorInput::mapYtelse).toList();
+        return alleYtelser == null ? null : alleYtelser.stream().map(MapTilKalkulatorInput::mapYtelse).collect(Collectors.toList());
     }
 
     private static YtelseDto mapYtelse(no.nav.folketrygdloven.kalkulator.modell.iay.YtelseDto ytelseDto) {
-        if (ytelseDto == null) {
-            return null;
-        }
-        var vedtaksDagsats = ytelseDto.getVedtaksDagsats().map(Beløp::getVerdi).map(BeløpDto::new).orElse(null);
-        var ytelseAnvist = mapYtelseAnvistSet(ytelseDto.getYtelseAnvist());
-        var relatertYtelseType = new RelatertYtelseType(ytelseDto.getYtelseType().getKode());
-        var periode = mapPeriode(ytelseDto.getPeriode());
-        var temaUnderkategori = ytelseDto.getBehandlingsTema() == null || ytelseDto.getBehandlingsTema()
-            .equals(TemaUnderkategori.UDEFINERT) ? null : TemaUnderkategori.fraKode(ytelseDto.getBehandlingsTema().getKode());
-        var ytelseGrunnlag = mapYtelsegrunnlag(ytelseDto).orElse(null);
-        return new YtelseDto(vedtaksDagsats, ytelseAnvist, relatertYtelseType, periode, temaUnderkategori, ytelseGrunnlag);
+        return ytelseDto == null ? null
+            : new YtelseDto(
+                ytelseDto.getVedtaksDagsats().map(Beløp::getVerdi).map(BeløpDto::new).orElse(null),
+                mapYtelseAnvistSet(ytelseDto.getYtelseAnvist()),
+                ytelseDto.getYtelseType() == null ? null : new RelatertYtelseType(ytelseDto.getYtelseType().getKode()),
+                mapPeriode(ytelseDto.getPeriode()),
+                ytelseDto.getBehandlingsTema() == null ||
+                    ytelseDto.getBehandlingsTema().equals(TemaUnderkategori.UDEFINERT) ? null
+                        : TemaUnderkategori.fraKode(ytelseDto.getBehandlingsTema().getKode()),
+                mapYtelsegrunnlag(ytelseDto).orElse(null));
     }
 
     private static Optional<YtelseGrunnlagDto> mapYtelsegrunnlag(no.nav.folketrygdloven.kalkulator.modell.iay.YtelseDto ytelseDto) {
             return ytelseDto.getYtelseGrunnlag().map(yg -> {
-                var ytelsefordelinger = yg.getFordeling().stream()
+                List<no.nav.folketrygdloven.kalkulus.iay.ytelse.v1.YtelseFordelingDto> ytelsefordelinger = yg.getFordeling().stream()
                     .map(MapTilKalkulatorInput::mapYtelseFordeling)
-                    .toList();
+                    .collect(Collectors.toList());
                 return new YtelseGrunnlagDto(Arbeidskategori.fraKode(yg.getArbeidskategori()), ytelsefordelinger);
             });
     }
 
     private static no.nav.folketrygdloven.kalkulus.iay.ytelse.v1.YtelseFordelingDto mapYtelseFordeling(YtelseFordelingDto yf) {
-        var ag = mapArbeidsgiverNullsafe(yf.getArbeidsgiver());
+        Aktør ag = mapArbeidsgiver(yf.getArbeidsgiver());
         var periodeType = yf.getHyppighet() == null
             ? null
             :  InntektPeriodeType.fraKode(yf.getHyppighet().getKode());
@@ -310,18 +306,21 @@ class MapTilKalkulatorInput {
     }
 
     private static List<OppgittEgenNæringDto> mapNæringer(List<no.nav.folketrygdloven.kalkulator.modell.iay.OppgittEgenNæringDto> egenNæring) {
-        return egenNæring == null ? null : egenNæring.stream().map(MapTilKalkulatorInput::mapNæring).toList();
+        return egenNæring == null ? null : egenNæring.stream().map(MapTilKalkulatorInput::mapNæring).collect(Collectors.toList());
     }
 
     private static OppgittEgenNæringDto mapNæring(no.nav.folketrygdloven.kalkulator.modell.iay.OppgittEgenNæringDto oppgittEgenNæringDto) {
-        if (oppgittEgenNæringDto == null) {
-            return null;
-        }
-        return new OppgittEgenNæringDto(mapPeriode(oppgittEgenNæringDto.getPeriode()),
-            oppgittEgenNæringDto.getOrgnr() == null ? null : new Organisasjon(oppgittEgenNæringDto.getOrgnr()),
-            oppgittEgenNæringDto.getVirksomhetType() == null ? null : VirksomhetType.fraKode(oppgittEgenNæringDto.getVirksomhetType().getKode()),
-            oppgittEgenNæringDto.getNyoppstartet(), oppgittEgenNæringDto.getVarigEndring(), oppgittEgenNæringDto.getEndringDato(),
-            oppgittEgenNæringDto.getNyIArbeidslivet(), oppgittEgenNæringDto.getBegrunnelse(), oppgittEgenNæringDto.getBruttoInntekt());
+        return oppgittEgenNæringDto == null ? null
+            : new OppgittEgenNæringDto(
+                mapPeriode(oppgittEgenNæringDto.getPeriode()),
+                oppgittEgenNæringDto.getOrgnr() == null ? null : new Organisasjon(oppgittEgenNæringDto.getOrgnr()),
+                oppgittEgenNæringDto.getVirksomhetType() == null ? null : VirksomhetType.fraKode(oppgittEgenNæringDto.getVirksomhetType().getKode()),
+                oppgittEgenNæringDto.getNyoppstartet(),
+                oppgittEgenNæringDto.getVarigEndring(),
+                oppgittEgenNæringDto.getEndringDato(),
+                oppgittEgenNæringDto.getNyIArbeidslivet(),
+                oppgittEgenNæringDto.getBegrunnelse(),
+                oppgittEgenNæringDto.getBruttoInntekt());
     }
 
     private static OppgittFrilansDto mapFrilans(Optional<no.nav.folketrygdloven.kalkulator.modell.iay.OppgittFrilansDto> frilans) {
@@ -335,7 +334,7 @@ class MapTilKalkulatorInput {
     }
 
     private static List<InntektsmeldingDto> mapInntektsmeldinger(List<no.nav.folketrygdloven.kalkulator.modell.iay.InntektsmeldingDto> alleInntektsmeldinger) {
-        return alleInntektsmeldinger == null ? null : alleInntektsmeldinger.stream().map(MapTilKalkulatorInput::mapInntektsmelding).toList();
+        return alleInntektsmeldinger == null ? null : alleInntektsmeldinger.stream().map(MapTilKalkulatorInput::mapInntektsmelding).collect(Collectors.toList());
     }
 
     private static InntektsmeldingDto mapInntektsmelding(no.nav.folketrygdloven.kalkulator.modell.iay.InntektsmeldingDto inntektsmeldingDto) {
@@ -348,41 +347,36 @@ class MapTilKalkulatorInput {
                 mapAbakusReferanse(inntektsmeldingDto.getArbeidsforholdRef()),
                 inntektsmeldingDto.getStartDatoPermisjon().orElse(null),
                 inntektsmeldingDto.getRefusjonOpphører(),
-                mapBeløpNullsafe(inntektsmeldingDto.getRefusjonBeløpPerMnd()),
+                mapBeløp(inntektsmeldingDto.getRefusjonBeløpPerMnd()),
                 inntektsmeldingDto.getJournalpostId(),
                 inntektsmeldingDto.getKanalreferanse());
     }
 
-    private static BeløpDto mapBeløpNullsafe(Beløp beløp) {
-        return beløp == null ? null : mapBeløp(beløp);
-    }
-
     private static BeløpDto mapBeløp(Beløp beløp) {
-        return new BeløpDto(beløp.getVerdi());
+        return beløp == null ? null : new BeløpDto(beløp.getVerdi());
     }
 
     private static List<no.nav.folketrygdloven.kalkulus.iay.inntekt.v1.RefusjonDto> mapRefusjonEndringer(List<RefusjonDto> endringerRefusjon) {
-        return endringerRefusjon == null ? null : endringerRefusjon.stream().map(MapTilKalkulatorInput::mapRefusjonEndring).toList();
+        return endringerRefusjon == null ? null : endringerRefusjon.stream().map(MapTilKalkulatorInput::mapRefusjonEndring).collect(Collectors.toList());
     }
 
     private static no.nav.folketrygdloven.kalkulus.iay.inntekt.v1.RefusjonDto mapRefusjonEndring(RefusjonDto refusjonDto) {
         return refusjonDto == null ? null
             : new no.nav.folketrygdloven.kalkulus.iay.inntekt.v1.RefusjonDto(
-                mapBeløpNullsafe(refusjonDto.getRefusjonsbeløp()),
+                mapBeløp(refusjonDto.getRefusjonsbeløp()),
                 refusjonDto.getFom());
     }
 
     private static List<no.nav.folketrygdloven.kalkulus.iay.inntekt.v1.NaturalYtelseDto> mapNaturalYtelser(List<NaturalYtelseDto> naturalYtelser) {
-        return naturalYtelser == null ? null : naturalYtelser.stream().map(MapTilKalkulatorInput::mapNaturalYtelse).toList();
+        return naturalYtelser == null ? null : naturalYtelser.stream().map(MapTilKalkulatorInput::mapNaturalYtelse).collect(Collectors.toList());
     }
 
     private static no.nav.folketrygdloven.kalkulus.iay.inntekt.v1.NaturalYtelseDto mapNaturalYtelse(NaturalYtelseDto naturalYtelseDto) {
-        if (naturalYtelseDto == null) {
-            return null;
-        }
-        return new no.nav.folketrygdloven.kalkulus.iay.inntekt.v1.NaturalYtelseDto(mapPeriodeNullsafe(naturalYtelseDto.getPeriode()),
-            mapBeløpNullsafe(naturalYtelseDto.getBeloepPerMnd()),
-            naturalYtelseDto.getType() == null ? null : NaturalYtelseType.fraKode(naturalYtelseDto.getType().getKode()));
+        return naturalYtelseDto == null ? null
+            : new no.nav.folketrygdloven.kalkulus.iay.inntekt.v1.NaturalYtelseDto(
+                mapPeriode(naturalYtelseDto.getPeriode()),
+                mapBeløp(naturalYtelseDto.getBeloepPerMnd()),
+                naturalYtelseDto.getType() == null ? null : NaturalYtelseType.fraKode(naturalYtelseDto.getType().getKode()));
     }
 
     private static InntekterDto mapInntekter(Optional<AktørInntektDto> aktørInntektFraRegister) {
@@ -390,20 +384,22 @@ class MapTilKalkulatorInput {
     }
 
     private static List<UtbetalingDto> mapUtbetalinger(Collection<InntektDto> inntekt) {
-        return inntekt == null ? null : inntekt.stream().map(MapTilKalkulatorInput::mapUtbetaling).toList();
+        return inntekt == null ? null : inntekt.stream().map(MapTilKalkulatorInput::mapUtbetaling).collect(Collectors.toList());
     }
 
     private static UtbetalingDto mapUtbetaling(InntektDto inntektDto) {
         if (inntektDto == null) {
             return null;
         }
-        var utbetalingDto = new UtbetalingDto(InntektskildeType.fraKode(inntektDto.getInntektsKilde().getKode()), mapPoster(inntektDto.getAlleInntektsposter()));
-        utbetalingDto.setArbeidsgiver(mapArbeidsgiverNullsafe(inntektDto.getArbeidsgiver()));
+        var utbetalingDto = new UtbetalingDto(
+            inntektDto.getInntektsKilde() == null ? null : InntektskildeType.fraKode(inntektDto.getInntektsKilde().getKode()),
+            mapPoster(inntektDto.getAlleInntektsposter()));
+        utbetalingDto.setArbeidsgiver(mapArbeidsgiver(inntektDto.getArbeidsgiver()));
         return utbetalingDto;
     }
 
     private static List<UtbetalingsPostDto> mapPoster(Collection<InntektspostDto> alleInntektsposter) {
-        return alleInntektsposter.stream().map(MapTilKalkulatorInput::mapPost).toList();
+        return alleInntektsposter == null ? null : alleInntektsposter.stream().map(MapTilKalkulatorInput::mapPost).collect(Collectors.toList());
     }
 
     private static UtbetalingsPostDto mapPost(InntektspostDto inntektspostDto) {
@@ -411,15 +407,15 @@ class MapTilKalkulatorInput {
             return null;
         }
         var utbetaling = new UtbetalingsPostDto(
-            mapPeriodeNullsafe(inntektspostDto.getPeriode()),
+            mapPeriode(inntektspostDto.getPeriode()),
             inntektspostDto.getInntektspostType() == null
                 ? InntektspostType.fraKode(no.nav.foreldrepenger.domene.iay.modell.kodeverk.InntektspostType.UDEFINERT.getKode())
                 : InntektspostType.fraKode(inntektspostDto.getInntektspostType().getKode()),
             inntektspostDto.getBeløp() == null ? null : inntektspostDto.getBeløp().getVerdi());
-        var skatteOgAvgiftsregelType = inntektspostDto.getSkatteOgAvgiftsregelType() != null
+        SkatteOgAvgiftsregelType skatteOgAvgiftsregelType = inntektspostDto.getSkatteOgAvgiftsregelType() != null
             ? SkatteOgAvgiftsregelType.fraKode(inntektspostDto.getSkatteOgAvgiftsregelType().getKode())
             : null;
-        var utbetaltYtelseFraOffentligeType = mapYtelsetype(inntektspostDto.getYtelseType());
+        UtbetaltYtelseFraOffentligeType utbetaltYtelseFraOffentligeType = mapYtelsetype(inntektspostDto.getYtelseType());
         utbetaling.setSkattAvgiftType(skatteOgAvgiftsregelType);
         utbetaling.setUtbetaltYtelseType(utbetaltYtelseFraOffentligeType);
         return utbetaling;
@@ -432,12 +428,8 @@ class MapTilKalkulatorInput {
         return new UtbetaltYtelseFraOffentligeType(type.getKode());
     }
 
-    private static Periode mapPeriodeNullsafe(Intervall periode) {
-        return periode == null ? null : mapPeriode(periode);
-    }
-
     private static Periode mapPeriode(Intervall periode) {
-        return new Periode(periode.getFomDato(), periode.getTomDato());
+        return periode == null ? null : new Periode(periode.getFomDato(), periode.getTomDato());
     }
 
     private static ArbeidsforholdInformasjonDto mapArbeidsforholdInformasjon(Optional<no.nav.folketrygdloven.kalkulator.modell.iay.ArbeidsforholdInformasjonDto> arbeidsforholdInformasjon) {
@@ -450,60 +442,52 @@ class MapTilKalkulatorInput {
     }
 
     private static List<ArbeidsforholdOverstyringDto> mapOverstyringer(List<no.nav.folketrygdloven.kalkulator.modell.iay.ArbeidsforholdOverstyringDto> overstyringer) {
-        return overstyringer == null ? null : overstyringer.stream().map(MapTilKalkulatorInput::mapOverstyring).toList();
+        return overstyringer == null ? null : overstyringer.stream().map(MapTilKalkulatorInput::mapOverstyring).collect(Collectors.toList());
     }
 
     private static ArbeidsforholdOverstyringDto mapOverstyring(no.nav.folketrygdloven.kalkulator.modell.iay.ArbeidsforholdOverstyringDto arbeidsforholdOverstyringDto) {
-        if (arbeidsforholdOverstyringDto == null) {
-            return null;
-        }
-        var arbeidsgiver = mapArbeidsgiver(arbeidsforholdOverstyringDto.getArbeidsgiver());
-        var arbeidsforholdRefDto = mapAbakusReferanse(arbeidsforholdOverstyringDto.getArbeidsforholdRef());
-        var handling = arbeidsforholdOverstyringDto.getHandling() == null ? null : ArbeidsforholdHandlingType.fraKode(
-            arbeidsforholdOverstyringDto.getHandling().getKode());
-        return new ArbeidsforholdOverstyringDto(arbeidsgiver, arbeidsforholdRefDto, handling);
+        return arbeidsforholdOverstyringDto == null ? null
+            : new ArbeidsforholdOverstyringDto(
+                mapArbeidsgiver(arbeidsforholdOverstyringDto.getArbeidsgiver()),
+                mapAbakusReferanse(arbeidsforholdOverstyringDto.getArbeidsforholdRef()),
+                arbeidsforholdOverstyringDto.getHandling() == null ? null : ArbeidsforholdHandlingType.fraKode(arbeidsforholdOverstyringDto.getHandling().getKode()));
     }
 
     private static ArbeidDto mapArbeidDto(Optional<AktørArbeidDto> aktørArbeidFraRegister) {
         return aktørArbeidFraRegister.map(aktørArbeidDto -> new ArbeidDto(aktørArbeidDto.hentAlleYrkesaktiviteter()
-            .stream().map(MapTilKalkulatorInput::mapYrkesaktivitet).toList()))
+            .stream().map(MapTilKalkulatorInput::mapYrkesaktivitet).collect(Collectors.toList())))
             .orElse(null);
     }
 
     private static no.nav.folketrygdloven.kalkulus.iay.arbeid.v1.YrkesaktivitetDto mapYrkesaktivitet(YrkesaktivitetDto yrkesaktivitetDto) {
-        if (yrkesaktivitetDto == null) {
-            return null;
-        }
-        var arbeidsgiver = mapArbeidsgiverNullsafe(yrkesaktivitetDto.getArbeidsgiver());
-        var abakusReferanse = mapAbakusReferanse(yrkesaktivitetDto.getArbeidsforholdRef());
-        var arbeidType = ArbeidType.fraKode(yrkesaktivitetDto.getArbeidType().getKode());
-        var aktivitetsAvtaler = mapAktivitetsAvtaler(yrkesaktivitetDto.getAlleAktivitetsAvtaler());
-        var permisjoner = mapPermisjoner(yrkesaktivitetDto.getPermisjoner());
-        return new no.nav.folketrygdloven.kalkulus.iay.arbeid.v1.YrkesaktivitetDto(arbeidsgiver, abakusReferanse, arbeidType, aktivitetsAvtaler,
-            permisjoner);
+        return yrkesaktivitetDto == null ? null
+            : new no.nav.folketrygdloven.kalkulus.iay.arbeid.v1.YrkesaktivitetDto(
+                mapArbeidsgiver(yrkesaktivitetDto.getArbeidsgiver()),
+                mapAbakusReferanse(yrkesaktivitetDto.getArbeidsforholdRef()),
+                yrkesaktivitetDto.getArbeidType() == null ? null : ArbeidType.fraKode(yrkesaktivitetDto.getArbeidType().getKode()),
+                mapAktivitetsAvtaler(yrkesaktivitetDto.getAlleAktivitetsAvtaler()),
+                mapPermisjoner(yrkesaktivitetDto.getPermisjoner()));
     }
 
     private static List<PermisjonDto> mapPermisjoner(Set<no.nav.folketrygdloven.kalkulator.modell.iay.permisjon.PermisjonDto> permisjoner) {
         return permisjoner.stream()
-            .map(MapTilKalkulatorInput::mapPermisjon).toList();
+            .map(MapTilKalkulatorInput::mapPermisjon).collect(Collectors.toList());
     }
 
     private static PermisjonDto mapPermisjon(no.nav.folketrygdloven.kalkulator.modell.iay.permisjon.PermisjonDto perm) {
-        var periode = mapPeriode(perm.getPeriode());
-        return new PermisjonDto(periode, perm.getProsentsats(), perm.getPermisjonsbeskrivelseType());
+        return new PermisjonDto(mapPeriode(perm.getPeriode()), perm.getProsentsats(), perm.getPermisjonsbeskrivelseType());
     }
 
     private static List<AktivitetsAvtaleDto> mapAktivitetsAvtaler(Collection<no.nav.folketrygdloven.kalkulator.modell.iay.AktivitetsAvtaleDto> alleAktivitetsAvtaler) {
-        return alleAktivitetsAvtaler == null ? null : alleAktivitetsAvtaler.stream().map(MapTilKalkulatorInput::mapAktivitetsAvtale).toList();
+        return alleAktivitetsAvtaler == null ? null : alleAktivitetsAvtaler.stream().map(MapTilKalkulatorInput::mapAktivitetsAvtale).collect(Collectors.toList());
     }
 
     private static AktivitetsAvtaleDto mapAktivitetsAvtale(no.nav.folketrygdloven.kalkulator.modell.iay.AktivitetsAvtaleDto aktivitetsAvtaleDto) {
-        if (aktivitetsAvtaleDto == null) {
-            return null;
-        }
-        var periode = mapPeriode(aktivitetsAvtaleDto.getPeriode());
-        var stillingsprosent = aktivitetsAvtaleDto.erAnsettelsesPeriode() ? null : BigDecimal.valueOf(100);
-        return new AktivitetsAvtaleDto(periode, aktivitetsAvtaleDto.getSisteLønnsendringsdato(), stillingsprosent);
+        return aktivitetsAvtaleDto == null ? null
+            : new AktivitetsAvtaleDto(
+                mapPeriode(aktivitetsAvtaleDto.getPeriode()),
+                aktivitetsAvtaleDto.getSisteLønnsendringsdato(),
+                aktivitetsAvtaleDto.erAnsettelsesPeriode() ? null : BigDecimal.valueOf(100));
     }
 
     private static no.nav.folketrygdloven.kalkulus.felles.v1.InternArbeidsforholdRefDto mapAbakusReferanse(InternArbeidsforholdRefDto arbeidsforholdRef) {
@@ -513,13 +497,11 @@ class MapTilKalkulatorInput {
         return new no.nav.folketrygdloven.kalkulus.felles.v1.InternArbeidsforholdRefDto(arbeidsforholdRef.getReferanse());
     }
 
-    private static Aktør mapArbeidsgiverNullsafe(Arbeidsgiver arbeidsgiver) {
-        return arbeidsgiver == null ? null : mapArbeidsgiver(arbeidsgiver);
-    }
-
     private static Aktør mapArbeidsgiver(Arbeidsgiver arbeidsgiver) {
-        return arbeidsgiver.getErVirksomhet() ? new Organisasjon(arbeidsgiver.getIdentifikator()) : new AktørIdPersonident(
-            arbeidsgiver.getIdentifikator());
+        if (arbeidsgiver == null) {
+            return null;
+        }
+        return arbeidsgiver.getErVirksomhet() ? new Organisasjon(arbeidsgiver.getIdentifikator()) : new AktørIdPersonident(arbeidsgiver.getIdentifikator());
     }
 
 }
